# myredis-py

./: .gitignore  CMakeLists.txt  README.md  _myredis.pyi  pyproject.toml  setup.py
src/myredis/: __init__.py
src/myredis/adapters/: commands.c  redis.c  redis.h  response_parser.c  response_parser.h
src/myredis/adapters/interfaces/: redis.h
src/myredis/application/: interactors.c  interactors.h
src/myredis/application/interfaces/: redis.h
src/myredis/main/: api.c  api.h  python_api.c  python_api.h
tests/: conftest.py  test_async.py  test_sync.py
