[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = true
warn_unused_configs = true
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[project]
name = "myredis-py"
version = "0.0.0"
authors = [
    { name = "Sequew", email = "kryseyt@gmail.com" },
]
description = "MyRedis Python client library written on C"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest",
]
types-checking = [
    "mypy",
]
dev = [
    "myredis-py[test, types-checking]",
]

[project.urls]
"Homepage" = "https://github.com/KrySeyt/myredis-py"
